[gd_scene load_steps=6 format=4 uid="uid://d35akktui3qne"]

[ext_resource type="Script" uid="uid://ddxur7vrjcu25" path="res://World/room_controller.gd" id="1_cpfpd"]
[ext_resource type="PackedScene" uid="uid://c6tgehyvfiy28" path="res://World/LevelEditor/Objects/RespawnPoint/RespawnPoint.tscn" id="2_xqnq5"]
[ext_resource type="PackedScene" uid="uid://dmloe3r5xxddf" path="res://World/LevelEditor/Objects/Tiles/TileSets.tscn" id="3_vwg6i"]
[ext_resource type="PackedScene" uid="uid://c2kkt7g31y0ml" path="res://World/LevelEditor/Objects/Camera/defaultPlayerCameraReference.tscn" id="5_3ekm5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0i3ih"]
size = Vector2(3200, 3520)

[node name="Room000" type="Node2D"]
script = ExtResource("1_cpfpd")
camera_zoom = 0.36

[node name="RespawnPoint" parent="." instance=ExtResource("2_xqnq5")]
position = Vector2(-1536, -448)
scale = Vector2(1, 1.4000006)

[node name="tundratileset" parent="." instance=ExtResource("3_vwg6i")]
tile_map_data = PackedByteArray("AAD3/wEAAwAJAAIAAAD4/wEAAwAJAAIAAAD5/wEAAwAJAAIAAAD6/wEAAwAJAAIAAAD7/wEAAwAJAAIAAAD8/wEAAwAJAAIAAAD9/wEAAwAJAAIAAAABAAEAAwAJAAIAAAAEAAEAAwAJAAIAAAAFAAEAAwAJAAIAAAAGAAEAAwAJAAIAAAAHAAEAAwAJAAIAAAAIAAEAAwAJAAIAAAAJAAEAAwAJAAIAAAAKAAEAAwAJAAIAAAALAAAAAwAKAAAAAAALAAEAAwAJAAIAAAD0/wEAAwAJAAIAAADz/wEAAwAJAAIAAADz/wAAAwAJAAIAAADz/wIAAwAJAAMAAADy/wIAAwAIAAMAAADy/wEAAwAIAAEAAADy/wAAAwAIAAEAAAAMAAIAAwALAAMAAAAMAAEAAwALAAIAAAALAAIAAwAJAAMAAAAKAAIAAwAJAAMAAAAJAAIAAwAJAAMAAAAIAAIAAwAJAAMAAAAHAAIAAwAJAAMAAAAGAAIAAwAJAAMAAAAFAAIAAwAJAAMAAAAEAAIAAwAJAAMAAAABAAIAAwAJAAMAAAD9/wIAAwAJAAMAAAD8/wIAAwAJAAMAAAD7/wIAAwAJAAMAAAD6/wIAAwAJAAMAAAD5/wIAAwAJAAMAAAD4/wIAAwAJAAMAAAD3/wIAAwAJAAMAAAD0/wIAAwAJAAMAAAAMAAAAAwALAAAAAAAKAAAAAwAKAAAAAAAJAAAAAwAKAAAAAAAIAAAAAwAKAAAAAAAHAAAAAwAKAAAAAAAGAAAAAwAKAAAAAAAFAAAAAwAKAAAAAAAEAAAAAwAKAAAAAAABAAAAAwAKAAAAAAD9/wAAAwAKAAAAAAD8/wAAAwAKAAAAAAD7/wAAAwAKAAAAAAD4/wAAAwAJAAIAAAD3/wAAAwAJAAIAAAD0/wAAAwAJAAIAAAAAAAIAAwAJAAMAAAAAAAEAAwAJAAIAAAAAAAAAAwAKAAAAAAD//wIAAwAJAAMAAAD//wEAAwAJAAIAAAD//wAAAwAKAAAAAAD+/wIAAwAJAAMAAAD+/wEAAwAJAAIAAAD+/wAAAwAKAAAAAAD2/wIAAwAJAAMAAAD2/wEAAwAJAAIAAAD2/wAAAwAJAAIAAAD1/wIAAwAJAAMAAAD1/wEAAwAJAAIAAAD1/wAAAwAJAAIAAAD6/wAAAwAGAAEAAAD5/wAAAwAJAAIAAAADAAIAAwAJAAMAAAADAAEAAwAJAAIAAAADAAAAAwAKAAAAAAACAAIAAwAJAAMAAAACAAEAAwAJAAIAAAACAAAAAwAKAAAAAAD0////AwAJAAIAAAD0//7/AwAJAAIAAAD0//3/AwAKAAAAAADz////AwAJAAIAAADz//7/AwAJAAIAAADz//3/AwAKAAAAAADy////AwAIAAEAAADy//7/AwAIAAEAAADy//3/AwAIAAAAAAD5////AwAGAAEAAAD5//7/AwALAAIAAAD5//3/AwALAAAAAAD4////AwAJAAIAAAD4//7/AwAJAAIAAAD4//3/AwAKAAAAAAD3////AwAJAAIAAAD3//7/AwAJAAIAAAD3//3/AwAKAAAAAAD2////AwAJAAIAAAD2//7/AwAJAAIAAAD2//3/AwAKAAAAAAD1////AwAJAAIAAAD1//7/AwAJAAIAAAD1//3/AwAKAAAAAAD6////AwALAAAAAAAAAP//AQABAAAAAAABAP//AQABAAAAAAACAP//AQABAAAAAAADAP//AQABAAAAAAAEAP//AQABAAAAAAAFAP//AQABAAAAAAAGAP//AQABAAAAAAAHAP//AQABAAAAAAAIAP//AQABAAAAAAAJAP//AQABAAAAAAAKAP//AQABAAAAAAALAP//AQABAAAAAAAMAP//AQABAAAAAAD/////AQABAAAAAAD+////AQABAAAAAAD9////AQABAAAAAAALAP7/AAACAAMAAAAKAP7/AAABAAMAAAAMAP7/AAACAAMAAAD+//v/AAACAAMAAAD///v/AAACAAMAAAAAAPv/AAACAAMAAAABAPv/AAACAAMAAAAGAPn/AAACAAMAAAAHAPn/AAACAAMAAAAIAPn/AAACAAMAAAAJAPn/AAADAAMAAAABAPf/AAACAAMAAAACAPf/AAACAAMAAAADAPf/AAADAAMAAAAJAPL/AAADAAMAAAAIAPL/AAACAAMAAAAHAPL/AAACAAMAAAAGAPL/AAACAAMAAAAFAPL/AAACAAMAAAAEAPL/AAABAAMAAAAEAOv/AAACAAMAAAAFAOv/AAACAAMAAAAGAOv/AAADAAMAAAD4/+z/AAABAAMAAAD5/+z/AAACAAMAAAD6/+z/AAADAAMAAAAMAPT/AwALAAMAAAAMAPP/AwALAAIAAAAMAPL/AwALAAIAAAAMAPH/AwALAAIAAAAMAPD/AwALAAIAAAAMAO//AwALAAIAAAAMAO7/AwALAAIAAAAMAO3/AwALAAIAAAAMAOz/AwALAAIAAAAMAOv/AwALAAIAAAAMAOr/AwALAAIAAAAMAOn/AwALAAIAAAAMAOj/AwALAAIAAAAMAOf/AwALAAIAAAAMAOb/AwALAAIAAAAMAOX/AwALAAAAAAALAOb/AwAJAAIAAAALAOX/AwAKAAAAAAAKAOb/AwAJAAIAAAAKAOX/AwAKAAAAAAAJAOb/AwAFAAIAAAAJAOX/AwAKAAAAAAAIAOb/AwAJAAMAAAAIAOX/AwAKAAAAAAAHAOb/AwAJAAMAAAAHAOX/AwAKAAAAAAAGAOb/AwAJAAMAAAAGAOX/AwAKAAAAAAAFAOb/AwAJAAMAAAAFAOX/AwAKAAAAAAAEAOb/AwAJAAMAAAAEAOX/AwAKAAAAAAADAOb/AwAJAAMAAAADAOX/AwAKAAAAAAACAOb/AwAJAAMAAAACAOX/AwAKAAAAAAABAOb/AwAJAAMAAAABAOX/AwAKAAAAAAAAAOb/AwAJAAMAAAAAAOX/AwAKAAAAAAD//+b/AwAJAAMAAAD//+X/AwAKAAAAAAD+/+b/AwAJAAMAAAD+/+X/AwAKAAAAAAD9/+b/AwAJAAMAAAD9/+X/AwAKAAAAAAD8/+b/AwAJAAMAAAD8/+X/AwAKAAAAAAD7/+b/AwAJAAMAAAD7/+X/AwAKAAAAAAD6/+b/AwAJAAMAAAD6/+X/AwAKAAAAAAD5/+b/AwAJAAMAAAD5/+X/AwAKAAAAAAD4/+b/AwAJAAMAAAD4/+X/AwAKAAAAAAD3/+b/AwAJAAMAAAD3/+X/AwAKAAAAAAD2/+b/AwAJAAMAAAD2/+X/AwAKAAAAAAD1/+b/AwAJAAMAAAD1/+X/AwAKAAAAAAD0/+b/AwAJAAMAAAD0/+X/AwAKAAAAAADz/+b/AwAGAAIAAADz/+X/AwAKAAAAAAALAO7/AwAIAAEAAAALAO3/AwAIAAEAAAALAOz/AwAIAAEAAAALAOv/AwAIAAEAAAALAOr/AwAFAAIAAAALAOn/AwAJAAIAAAALAOj/AwAJAAIAAAALAOf/AwAJAAIAAAALAPT/AwAIAAMAAAALAPP/AwAIAAEAAAALAPL/AwAIAAEAAAALAPH/AwAIAAEAAAALAPD/AwAIAAEAAAALAO//AwAIAAEAAAAKAOr/AwAIAAMAAAAKAOn/AwAIAAEAAAAKAOj/AwAIAAEAAAAKAOf/AwAFAAIAAAAJAOf/AwAIAAMAAADz/+f/AwALAAIAAADy/+f/AwAIAAEAAADy/+b/AwAIAAEAAADz/+j/AwALAAMAAADy/+j/AwAIAAMAAADy/+X/AwAIAAAAAAD9//v/AAABAAMAAAAFAPn/AAABAAMAAAACAPv/AAADAAMAAAAAAPf/AAABAAMAAAD7/+//AAABAAMAAAD8/+//AAACAAMAAAD9/+//AAACAAMAAAD+/+//AAACAAMAAAD//+//AAACAAMAAAAAAO//AAACAAMAAAABAO//AAACAAMAAAACAO//AAACAAMAAAADAO//AAADAAMAAAADAOv/AAABAAMAAADy//L/AAACAAMAAADz//L/AAACAAMAAAD0//L/AAADAAMAAAD6//b/AAACAAMAAAD7//b/AAACAAMAAAD8//b/AAADAAMAAAD4//b/AAABAAMAAAD5//b/AAACAAMAAAD4//T/AAACAAMAAAD3//T/AAACAAMAAAD5//T/AAADAAMAAAD2//T/AAABAAMAAAA=")

[node name="defaultPlayerCameraReference" parent="." instance=ExtResource("5_3ekm5")]
visible = false
position = Vector2(-1088, -64)

[node name="Area2D" type="Area2D" parent="."]

[node name="LevelBounds" type="CollisionShape2D" parent="Area2D"]
z_index = 1
position = Vector2(-64, -1504)
shape = SubResource("RectangleShape2D_0i3ih")
debug_color = Color(1, 1, 1, 0.21568628)

[connection signal="body_entered" from="Area2D" to="." method="_entered_room_collider"]
[connection signal="body_exited" from="Area2D" to="." method="_exited_room_collider"]
